--- a/style.css
+++ b/style.css
@@ -49,18 +49,19 @@ ul li {
 	color: aqua;
 	text-align: center;
 	font-family: arial;
-	
-ul li a:hover {
-	display: block;
 }
 	
-ul li ul li {
+/* ul li a:hover {
+	display: block;
+}
+	 */
+/* ul li ul li {
 	display: none;
 }
-	
-ul li:hover ul li {
+	 */
+/* ul li:hover ul li {
 	display: block;
-}
+} */
 
 	footer {
 		bottom:0;
@@ -68,3 +69,9 @@ ul li:hover ul li {
 		opacity: .3;
 		background-color: black;
 	}
+
+	/* @charset "UTF-8";
+/* CSS Document */
+/* h1{
+	text-align: center;
+} */
