--- a/style2.css
+++ b/style2.css
@@ -1,5 +1,34 @@
 @charset "UTF-8";
-/* CSS Document */
-h1{
+.container{
 	text-align: center;
+
+	
 }
+
+.video {
+    position: fixed;
+    top: 50%; left: 50%;
+    z-index: 1;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;  
+    transform: translate(-50%, -50%);
+  }
+
+
+.card{
+    position: fixed;
+    top: 50%; left: 50%;
+    z-index: 2;
+    width: auto;
+    height: auto;  
+    transform: translate(-50%, -50%);
+	color: aliceblue;
+  }
+
+
+/*each card has an id if id ="recipe1" || id = "recipe2" and so on up to 10*/
+
+
+/*create on click for recipe with ajax call*/
