--- a/style2.css
+++ b/style2.css
@@ -25,6 +25,7 @@
     height: auto;  
     transform: translate(-50%, -50%);
 	color: aliceblue;
+	font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", "Arial Black", "sans-serif"
   }
 
 
