--- a/style.css
+++ b/style.css
@@ -49,18 +49,19 @@ ul li {
 	color: aqua;
 	text-align: center;
 	font-family: arial;
-	
-ul li a:hover {
-	display: block;
 }
 	
-ul li ul li {
+/* ul li a:hover {
+	display: block;
+}
+	 */
+/* ul li ul li {
 	display: none;
 }
-	
-ul li:hover ul li {
+	 */
+/* ul li:hover ul li {
 	display: block;
-}
+} */
 
 	footer {
 		bottom:0;
@@ -68,3 +69,37 @@ ul li:hover ul li {
 		opacity: .3;
 		background-color: black;
 	}
+
+	.container{
+		text-align: center;
+	
+		
+	}
+	
+	.video {
+		position: fixed;
+		top: 50%; left: 50%;
+		z-index: 1;
+		min-width: 100%;
+		min-height: 100%;
+		width: auto;
+		height: auto;  
+		transform: translate(-50%, -50%);
+	  }
+	
+	
+	.card{
+		position: fixed;
+		top: 50%; left: 50%;
+		z-index: 2;
+		width: auto;
+		height: auto;  
+		transform: translate(-50%, -50%);
+		color: aliceblue;
+	  }
+	
+	
+	/*each card has an id if id ="recipe1" || id = "recipe2" and so on up to 10*/
+	
+	
+	/*create on click for recipe with ajax call*/
