--- a/style.css
+++ b/style.css
@@ -104,9 +104,10 @@ ul li a:hover {
 	  }
 	
 	
-	.card{
-		position: fixed;
-		top: 50%; left: 50%;
+	.col-sm{
+		margin-left: 30px;
+		/* position: fixed; */
+		/* top: 50%; left: 50%; */
 		/* z-index: 2; */
 		width: auto;
 		height: auto;  
@@ -115,7 +116,7 @@ ul li a:hover {
 		font: 400 20px/0.8 'Great Vibes', Helvetica, sans-serif;
   		color: #fff;
  		text-shadow: 4px 4px 3px rgba(0,0,0,0.1); 
-	  }
+		}
 	
 	
 	/*each card has an id if id ="recipe1" || id = "recipe2" and so on up to 10*/
