--- a/style.css
+++ b/style.css
@@ -105,17 +105,23 @@ ul li a:hover {
 	
 	
 	.card{
-		position: fixed;
-		top: 50%; left: 50%;
+		/* position: fixed; */
+		/* top: 50%; left: 50%; */
 		/* z-index: 2; */
 		width: auto;
 		height: auto;  
 		transform: translate(-50%, -50%);
 		color: aliceblue;
-		font: 400 20px/0.8 'Great Vibes', Helvetica, sans-serif;
+
+		}
+		
+		.card-title {
+
+			font: 400 20px/0.8 'Great Vibes', Helvetica, sans-serif;
   		color: #fff;
  		text-shadow: 4px 4px 3px rgba(0,0,0,0.1); 
-	  }
+
+		}
 	
 	
 	/*each card has an id if id ="recipe1" || id = "recipe2" and so on up to 10*/
