--- a/style.css
+++ b/style.css
@@ -1,4 +1,19 @@
 @charset "UTF-8";
+
+video {
+	position: absolute;
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	z-index: -1;
+	min-width: 100%;
+	min-height: 100%;
+	width: auto;
+	height: auto;
+	transform: translate(-50%, -50%);
+	z-index: -1;
+}
+
 .backimage {
 	position: absolute;
 	position: fixed;
@@ -92,16 +107,16 @@ ul li a:hover {
 		
 	}
 	
-	.video {
+	/* .video {
 		position: fixed;
 		top: 50%; left: 50%;
-		/* z-index: 1; */
+		z-index: 1;
 		min-width: 100%;
 		min-height: 100%;
 		width: auto;
 		height: auto;  
 		transform: translate(-50%, -50%);
-	  }
+	  } */
 	
 	
 	.card{
@@ -128,6 +143,19 @@ ul li a:hover {
 		color: #fff; 
 	}
 	
+	.page3bg {
+		position: absolute;
+		position: fixed;
+		top: 50%;
+		left: 50%;
+		z-index: -1;
+		min-width: 100%;
+		min-height: 100%;
+		width: auto;
+		height: auto;
+		transform: translate(-50%, -50%);
+		z-index: -1;
+	}
 	
 	/*each card has an id if id ="recipe1" || id = "recipe2" and so on up to 10*/
 	
