--- a/style.css
+++ b/style.css
@@ -100,13 +100,17 @@ ul li a:hover {
 	    margin-left: 25%;
 	}
 
-	.container{
+	#container{
 		text-align: center;
 		/* z-index: 2; */
 	
 		
 	}
-	
+
+	#container1{
+		text-align: center;
+		/* z-index: 2; */
+	}
 	/* .video {
 		position: fixed;
 		top: 50%; left: 50%;
@@ -155,6 +159,10 @@ ul li a:hover {
 		height: auto;
 		transform: translate(-50%, -50%);
 		z-index: -1;
+	}
+
+	h1, p, label, li {
+		color: #fff; 
 	}
 	
 	/*each card has an id if id ="recipe1" || id = "recipe2" and so on up to 10*/
