--- a/style.css
+++ b/style.css
@@ -125,14 +125,6 @@ ul li a:hover {
   		color: #fff;
  		text-shadow: 4px 4px 3px rgba(0,0,0,0.1); 
 	  }
-
-
-
-	
-	
-
-
-		}
 		
 	.card-title {
 
@@ -157,7 +149,6 @@ ul li a:hover {
 		width: auto;
 		height: auto;
 		transform: translate(-50%, -50%);
-		z-index: -1;
 	}
 
 	h1, p, label, li {
@@ -165,9 +156,9 @@ ul li a:hover {
 	}
 	
 .buttoncontainer{
-	position: absolute;
 	bottom: 0%;
 	left: 40%;
+	align-content: center
 }
 h1{
 	color: aliceblue;
