--- a/style.css
+++ b/style.css
@@ -155,14 +155,23 @@ ul li a:hover {
 		color: #fff; 
 	}
 	
-.buttoncontainer{
+.form-group{
 	bottom: 0%;
 	left: 40%;
-	align-content: center
+	align-content: center;
+	position: fixed;
+}
+
+.sign{
+	bottom: 0%;
+	position: fixed;
+	margin: 0 0 0 4.5rem;
+
 }
 h1{
 	color: aliceblue;
   font: 400 100px/1.5 'Pacifico', Helvetica, sans-serif;
-  text-shadow: 3px 3px 0px rgba(0,0,0,0.1), 7px 7px 0px rgba(0,0,0,0.05);
+	text-shadow: 3px 3px 0px rgba(0,0,0,0.1), 7px 7px 0px rgba(0,0,0,0.05);
+
 }
 
